get conda info in ci_test

--- a/.github/workflows/ci_testing.yml
+++ b/.github/workflows/ci_testing.yml
@@ -40,3 +40,4 @@ jobs:
           auto-activate-base: false
           activate-environment: project
           environment-file: environment.yml
+      - run: conda info
