--- a/requirements_pkg.txt
+++ b/requirements_pkg.txt
@@ -1,12 +1,10 @@
 setuptools
-numpy
-scipy
-numpy>=1.16.5
-scipy
-pandas
-scikit-learn
-seaborn
-ipywidgets
-notebook
-pytest
 pip
+numpy==1.21.2
+scipy==1.7.1
+pandas==1.3.3
+scikit-learn==1.0
+seaborn==0.11.2
+ipywidgets==8.0.0a4  
+notebook==6.3.0
+pytest==6.2.4
