--- a/requirements_pkg.txt
+++ b/requirements_pkg.txt
@@ -3,8 +3,8 @@ pip
 numpy==1.21.2
 scipy==1.7.1
 pandas==1.3.3
-scikit-learn==1.0
+scikit-learn==0.24.2
 seaborn==0.11.2
-ipywidgets==8.0.0a4  
-notebook==6.4.1
+ipywidgets==7.6.5 
+notebook==6.4.4
 pytest==6.2.4
